# smart_cv

./: Dockerfile  Key_words.txt  README.md  deploy  file_dialoger.py  log.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
misc/: CriteriaChecker.py  ad_resume_parsing.ipynb  ad_smart_cv_wip.ipynb  config.json  cv_generation.ipynb  eval_kw.ipynb  generated_doc_combined.docx  hello.gv  prompt_dict.json  raglab.code-workspace  st_interface.py  test_json_file.json  tw_resume_parsing.ipynb  tw_smart_cv_wip.ipynb
misc/contents/: infosaved.json
misc/filled/: Adil.docx  Adil_filled.docx  Axel_augmented.docx  DT_OBE_EHE0804.docx  Guillaume_augmented.docx  Guillaume_filled.docx  Jonathan_augmented.docx  SCH_augmented.docx  TNA.docx  Thor_Whalen_augmented.docx  Thor_Whalen_dt.docx  natouri_augmented.docx
smart_cv/: CriteriaChecker.py  Dockerfile  ResumeParser.py  VectorDB.py  __init__.py  base.py  interface.py  interface_ws.py  resume_parser.py  st_interface.py  util.py
smart_cv/cv_gen/: __init__.py  cv_gen_base.py
smart_cv/data/: DT_Template.docx  DT_Template_old.docx  config.json  json_example.txt  ~$_Template.docx
smart_cv/data/cvs/: CV_Agathe.docx  CV_Axel.docx  CV_Elena.docx  CV_Gilles_Pons.docx  CV_Jonathan.docx  CV_Maxence.docx  CV_Mehdi.docx  CV_Sana.docx  CV_Steffy.docx  CV_Victor.docx
smart_cv/data/cvs_info/: Thor_Whalen_CV.json  example.json
smart_cv/data/defaults/: DT_Template.docx  stacks_keywords.txt
smart_cv/data/filled/: Guillaume_filled.docx
