[metadata]
version = 0.0.1
description = Tools to retrieve and check information and generate information based on CVs

description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = smart_cv
display_name = smart_cv

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	pdfplumber
 	pandas
  	dol
   	config2py
    meshed
    tiktoken
	pypdf
	docxtpl
	i2
	langchain
	msword
	oa

